--- a/package/crds/composer.gcp.upbound.io_environments.yaml
+++ b/package/crds/composer.gcp.upbound.io_environments.yaml
@@ -2687,9 +2687,20 @@ spec:
                     properties:
                       dataRetentionConfig:
                         description: |-
-                          Configuration setting for Airflow database retention mechanism. Structure is
+                          Configuration setting for airflow data rentention mechanism. Structure is
                           documented below.
                         properties:
+                          airflowMetadataRetentionConfig:
+                            description: Configuration parameters for this environment  Structure
+                              is documented below.
+                            items:
+                              properties:
+                                retentionDays:
+                                  type: number
+                                retentionMode:
+                                  type: string
+                              type: object
+                            type: array
                           taskLogsRetentionConfig:
                             description: |-
                               The configuration setting for Task Logs. Structure is
@@ -2725,6 +2736,15 @@ spec:
                               belong to the enclosing environment's project and region.
                             type: string
                         type: object
+                      enablePrivateBuildsOnly:
+                        description: |-
+                          If true, builds performed during operations that install Python packages have only private connectivity to Google services.
+                          If false, the builds also have access to the internet.
+                        type: boolean
+                      enablePrivateEnvironment:
+                        description: If true, a private Composer environment will
+                          be created.
+                        type: boolean
                       encryptionConfig:
                         description: |-
                           The encryption options for the Cloud Composer environment and its
@@ -2798,6 +2818,17 @@ spec:
                         description: The configuration used for the Kubernetes Engine
                           cluster.  Structure is documented below.
                         properties:
+                          composerInternalIpv4CidrBlock:
+                            description: |-
+                              /20 IPv4 cidr range that will be used by Composer internal components.
+                              Cannot be updated.
+                            type: string
+                          composerNetworkAttachment:
+                            description: |-
+                              PSC (Private Service Connect) Network entry point. Customers can pre-create the Network Attachment
+                              and point Cloud Composer environment to use. It is possible to share network attachment among many environments,
+                              provided enough IP addresses are available.
+                            type: string
                           diskSizeGb:
                             description: |-
                               The disk size in GB used for node VMs. Minimum size is 20GB.
@@ -3236,6 +3267,17 @@ spec:
                               separated by a hyphen, for example "core-dags_are_paused_at_creation".
                             type: object
                             x-kubernetes-map-type: granular
+                          cloudDataLineageIntegration:
+                            description: |-
+                              The configuration for Cloud Data Lineage integration. Structure is
+                              documented below.
+                            properties:
+                              enabled:
+                                description: When enabled, Cloud Composer periodically
+                                  saves snapshots of your environment to a Cloud Storage
+                                  bucket.
+                                type: boolean
+                            type: object
                           envVariables:
                             additionalProperties:
                               type: string
@@ -3269,6 +3311,10 @@ spec:
                           schedulerCount:
                             description: The number of schedulers for Airflow.
                             type: number
+                          webServerPluginsMode:
+                            description: Web server plugins configuration. Can be
+                              either 'ENABLED' or 'DISABLED'. Defaults to 'ENABLED'.
+                            type: string
                         type: object
                       webServerConfig:
                         description: The configuration settings for the Airflow web
@@ -3310,6 +3356,25 @@ spec:
                           The Kubernetes workloads configuration for GKE cluster associated with the
                           Cloud Composer environment.
                         properties:
+                          dagProcessor:
+                            description: Configuration for resources used by DAG processor.
+                            properties:
+                              count:
+                                description: The number of Airflow triggerers.
+                                type: number
+                              cpu:
+                                description: The number of CPUs for a single Airflow
+                                  worker.
+                                type: number
+                              memoryGb:
+                                description: The amount of memory (GB) for a single
+                                  Airflow worker.
+                                type: number
+                              storageGb:
+                                description: The amount of storage (GB) for a single
+                                  Airflow worker.
+                                type: number
+                            type: object
                           scheduler:
                             description: Configuration for resources used by Airflow
                               schedulers.
@@ -3523,9 +3588,20 @@ spec:
                     properties:
                       dataRetentionConfig:
                         description: |-
-                          Configuration setting for Airflow database retention mechanism. Structure is
+                          Configuration setting for airflow data rentention mechanism. Structure is
                           documented below.
                         properties:
+                          airflowMetadataRetentionConfig:
+                            description: Configuration parameters for this environment  Structure
+                              is documented below.
+                            items:
+                              properties:
+                                retentionDays:
+                                  type: number
+                                retentionMode:
+                                  type: string
+                              type: object
+                            type: array
                           taskLogsRetentionConfig:
                             description: |-
                               The configuration setting for Task Logs. Structure is
@@ -3561,6 +3637,15 @@ spec:
                               belong to the enclosing environment's project and region.
                             type: string
                         type: object
+                      enablePrivateBuildsOnly:
+                        description: |-
+                          If true, builds performed during operations that install Python packages have only private connectivity to Google services.
+                          If false, the builds also have access to the internet.
+                        type: boolean
+                      enablePrivateEnvironment:
+                        description: If true, a private Composer environment will
+                          be created.
+                        type: boolean
                       encryptionConfig:
                         description: |-
                           The encryption options for the Cloud Composer environment and its
@@ -3634,6 +3719,17 @@ spec:
                         description: The configuration used for the Kubernetes Engine
                           cluster.  Structure is documented below.
                         properties:
+                          composerInternalIpv4CidrBlock:
+                            description: |-
+                              /20 IPv4 cidr range that will be used by Composer internal components.
+                              Cannot be updated.
+                            type: string
+                          composerNetworkAttachment:
+                            description: |-
+                              PSC (Private Service Connect) Network entry point. Customers can pre-create the Network Attachment
+                              and point Cloud Composer environment to use. It is possible to share network attachment among many environments,
+                              provided enough IP addresses are available.
+                            type: string
                           diskSizeGb:
                             description: |-
                               The disk size in GB used for node VMs. Minimum size is 20GB.
@@ -4072,6 +4168,17 @@ spec:
                               separated by a hyphen, for example "core-dags_are_paused_at_creation".
                             type: object
                             x-kubernetes-map-type: granular
+                          cloudDataLineageIntegration:
+                            description: |-
+                              The configuration for Cloud Data Lineage integration. Structure is
+                              documented below.
+                            properties:
+                              enabled:
+                                description: When enabled, Cloud Composer periodically
+                                  saves snapshots of your environment to a Cloud Storage
+                                  bucket.
+                                type: boolean
+                            type: object
                           envVariables:
                             additionalProperties:
                               type: string
@@ -4105,6 +4212,10 @@ spec:
                           schedulerCount:
                             description: The number of schedulers for Airflow.
                             type: number
+                          webServerPluginsMode:
+                            description: Web server plugins configuration. Can be
+                              either 'ENABLED' or 'DISABLED'. Defaults to 'ENABLED'.
+                            type: string
                         type: object
                       webServerConfig:
                         description: The configuration settings for the Airflow web
@@ -4146,6 +4257,25 @@ spec:
                           The Kubernetes workloads configuration for GKE cluster associated with the
                           Cloud Composer environment.
                         properties:
+                          dagProcessor:
+                            description: Configuration for resources used by DAG processor.
+                            properties:
+                              count:
+                                description: The number of Airflow triggerers.
+                                type: number
+                              cpu:
+                                description: The number of CPUs for a single Airflow
+                                  worker.
+                                type: number
+                              memoryGb:
+                                description: The amount of memory (GB) for a single
+                                  Airflow worker.
+                                type: number
+                              storageGb:
+                                description: The amount of storage (GB) for a single
+                                  Airflow worker.
+                                type: number
+                            type: object
                           scheduler:
                             description: Configuration for resources used by Airflow
                               schedulers.
@@ -4526,9 +4656,20 @@ spec:
                         type: string
                       dataRetentionConfig:
                         description: |-
-                          Configuration setting for Airflow database retention mechanism. Structure is
+                          Configuration setting for airflow data rentention mechanism. Structure is
                           documented below.
                         properties:
+                          airflowMetadataRetentionConfig:
+                            description: Configuration parameters for this environment  Structure
+                              is documented below.
+                            items:
+                              properties:
+                                retentionDays:
+                                  type: number
+                                retentionMode:
+                                  type: string
+                              type: object
+                            type: array
                           taskLogsRetentionConfig:
                             description: |-
                               The configuration setting for Task Logs. Structure is
@@ -4564,6 +4705,15 @@ spec:
                               belong to the enclosing environment's project and region.
                             type: string
                         type: object
+                      enablePrivateBuildsOnly:
+                        description: |-
+                          If true, builds performed during operations that install Python packages have only private connectivity to Google services.
+                          If false, the builds also have access to the internet.
+                        type: boolean
+                      enablePrivateEnvironment:
+                        description: If true, a private Composer environment will
+                          be created.
+                        type: boolean
                       encryptionConfig:
                         description: |-
                           The encryption options for the Cloud Composer environment and its
@@ -4641,6 +4791,17 @@ spec:
                         description: The configuration used for the Kubernetes Engine
                           cluster.  Structure is documented below.
                         properties:
+                          composerInternalIpv4CidrBlock:
+                            description: |-
+                              /20 IPv4 cidr range that will be used by Composer internal components.
+                              Cannot be updated.
+                            type: string
+                          composerNetworkAttachment:
+                            description: |-
+                              PSC (Private Service Connect) Network entry point. Customers can pre-create the Network Attachment
+                              and point Cloud Composer environment to use. It is possible to share network attachment among many environments,
+                              provided enough IP addresses are available.
+                            type: string
                           diskSizeGb:
                             description: |-
                               The disk size in GB used for node VMs. Minimum size is 20GB.
@@ -4851,6 +5012,17 @@ spec:
                               separated by a hyphen, for example "core-dags_are_paused_at_creation".
                             type: object
                             x-kubernetes-map-type: granular
+                          cloudDataLineageIntegration:
+                            description: |-
+                              The configuration for Cloud Data Lineage integration. Structure is
+                              documented below.
+                            properties:
+                              enabled:
+                                description: When enabled, Cloud Composer periodically
+                                  saves snapshots of your environment to a Cloud Storage
+                                  bucket.
+                                type: boolean
+                            type: object
                           envVariables:
                             additionalProperties:
                               type: string
@@ -4884,6 +5056,10 @@ spec:
                           schedulerCount:
                             description: The number of schedulers for Airflow.
                             type: number
+                          webServerPluginsMode:
+                            description: Web server plugins configuration. Can be
+                              either 'ENABLED' or 'DISABLED'. Defaults to 'ENABLED'.
+                            type: string
                         type: object
                       webServerConfig:
                         description: The configuration settings for the Airflow web
@@ -4925,6 +5101,25 @@ spec:
                           The Kubernetes workloads configuration for GKE cluster associated with the
                           Cloud Composer environment.
                         properties:
+                          dagProcessor:
+                            description: Configuration for resources used by DAG processor.
+                            properties:
+                              count:
+                                description: The number of Airflow triggerers.
+                                type: number
+                              cpu:
+                                description: The number of CPUs for a single Airflow
+                                  worker.
+                                type: number
+                              memoryGb:
+                                description: The amount of memory (GB) for a single
+                                  Airflow worker.
+                                type: number
+                              storageGb:
+                                description: The amount of storage (GB) for a single
+                                  Airflow worker.
+                                type: number
+                            type: object
                           scheduler:
                             description: Configuration for resources used by Airflow
                               schedulers.
