--- a/examples/compute/v1beta1/networkfirewallpolicyrule.yaml
+++ b/examples/compute/v1beta1/networkfirewallpolicyrule.yaml
@@ -46,6 +46,7 @@ kind: Network
 metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/networkfirewallpolicyrule
+    upjet.upbound.io/manual-intervention: "This resource was skipped because other related resources were also skipped."
   labels:
     testing.upbound.io/example-name: basic_network
   name: basic-network
