--- a/examples/compute/v1beta1/networkfirewallpolicyrule.yaml
+++ b/examples/compute/v1beta1/networkfirewallpolicyrule.yaml
@@ -75,6 +75,7 @@ kind: AddressGroup
 metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/networkfirewallpolicyrule
+    upjet.upbound.io/manual-intervention: "This resource was skipped because other related resources were also skipped."
   labels:
     testing.upbound.io/example-name: basic_global_networksecurity_address_group
   name: basic-global-networksecurity-address-group
