fix(): resolve flexibleappversion

--- a/examples/appengine/v1beta1/flexibleappversion.yaml
+++ b/examples/appengine/v1beta1/flexibleappversion.yaml
@@ -14,9 +14,9 @@ spec:
         targetUtilization: 0.5
     deployment:
       zip:
-        sourceUrl: https://storage.googleapis.com/${google_storage_bucket.bucket.name}/${google_storage_bucket_object.object.name}
+        sourceUrl: https://storage.googleapis.com/${data.bucket_name}/${data.object_name}
     entrypoint:
-      shell: node ./app.js
+      shell: node app.js
     envVariables:
       port: "8080"
     flexibleRuntimeSettings:
@@ -33,16 +33,12 @@ spec:
     livenessCheck:
       path: /
     noopOnDestroy: true
-    projectSelector:
-      matchLabels:
-        testing.upbound.io/example-name: gae_api
+    project: appeng-flex
     readinessCheck:
       path: /
     runtime: nodejs
     service: default
-    serviceAccountSelector:
-      matchLabels:
-        testing.upbound.io/example-name: custom_service_account
+    serviceAccount: ${data.service_account_name}@appeng-flex.iam.gserviceaccount.com
 
 ---
 
@@ -57,9 +53,7 @@ metadata:
 spec:
   forProvider:
     locationId: us-central
-    projectSelector:
-      matchLabels:
-        testing.upbound.io/example-name: my_project
+    project: appeng-flex
 
 ---
 
@@ -104,8 +98,8 @@ metadata:
   annotations:
     meta.upbound.io/example-id: appengine/v1beta1/flexibleappversion
   labels:
-    testing.upbound.io/example-name: custom_service_account
-  name: custom-service-account
+    testing.upbound.io/example-name: ${data.service_account_name}
+  name: ${data.service_account_name}
 spec:
   forProvider:
     displayName: Custom Service Account
@@ -119,8 +113,8 @@ metadata:
   annotations:
     meta.upbound.io/example-id: appengine/v1beta1/flexibleappversion
   labels:
-    testing.upbound.io/example-name: bucket
-  name: bucket
+    testing.upbound.io/example-name: test-bucket
+  name: ${data.bucket_name}
 spec:
   forProvider:
     location: US
@@ -134,12 +128,12 @@ metadata:
   annotations:
     meta.upbound.io/example-id: appengine/v1beta1/flexibleappversion
   labels:
-    testing.upbound.io/example-name: object
-  name: object
+    testing.upbound.io/example-name: node-js-project
+  name: node-js-project
 spec:
   forProvider:
     bucketSelector:
       matchLabels:
-        testing.upbound.io/example-name: bucket
-    name: hello-world.zip
-    source: ./test-fixtures/hello-world.zip
+        testing.upbound.io/example-name: ${data.bucket_name}
+    name: ${data.object_name}
+    source: ${data.object_source_path}
