--- a/package/crds/networkconnectivity.gcp.upbound.io_hubs.yaml
+++ b/package/crds/networkconnectivity.gcp.upbound.io_hubs.yaml
@@ -95,6 +95,11 @@ spec:
                     description: 'Immutable. The name of the hub. Hub names must be
                       unique. They use the following form: projects/{project_number}/locations/global/hubs/{hub_id}'
                     type: string
+                  policyMode:
+                    description: |-
+                      Optional. The policy mode of this hub. This field can be either PRESET or CUSTOM. If unspecified, the policyMode defaults to PRESET.
+                      Possible values are: CUSTOM, PRESET.
+                    type: string
                   presetTopology:
                     description: |-
                       Optional. The topology implemented in this hub. Currently, this field is only used when policyMode = PRESET. The available preset topologies are MESH and STAR. If presetTopology is unspecified and policyMode = PRESET, the presetTopology defaults to MESH. When policyMode = CUSTOM, the presetTopology is set to PRESET_TOPOLOGY_UNSPECIFIED.
@@ -140,6 +145,11 @@ spec:
                   name:
                     description: 'Immutable. The name of the hub. Hub names must be
                       unique. They use the following form: projects/{project_number}/locations/global/hubs/{hub_id}'
+                    type: string
+                  policyMode:
+                    description: |-
+                      Optional. The policy mode of this hub. This field can be either PRESET or CUSTOM. If unspecified, the policyMode defaults to PRESET.
+                      Possible values are: CUSTOM, PRESET.
                     type: string
                   presetTopology:
                     description: |-
@@ -356,6 +366,11 @@ spec:
                   name:
                     description: 'Immutable. The name of the hub. Hub names must be
                       unique. They use the following form: projects/{project_number}/locations/global/hubs/{hub_id}'
+                    type: string
+                  policyMode:
+                    description: |-
+                      Optional. The policy mode of this hub. This field can be either PRESET or CUSTOM. If unspecified, the policyMode defaults to PRESET.
+                      Possible values are: CUSTOM, PRESET.
                     type: string
                   presetTopology:
                     description: |-
